fix extra space/scrolling to the right, rm all space between product cards & detail text

--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -83,7 +83,3 @@
 @import "layouts/layouts"; // 1
 
 @import "vendor/jstree/style";
-
-body {
-  padding: 0;
-}
